--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lemon&display=swap');
 
 :root {
-    --laranja-claro: #FF862A;
-    --alto-contraste-fundo: #000000;
-    --alto-contraste-texto: #ffffff;
-    --alto-contraste-link: #ffd700;
+    --laranja-claro: #cf0808;
 }
 
 body {
@@ -46,8 +43,8 @@ section {
     position: absolute;
     right: 0;
     top: 18rem;
-    width: 45rem;
-    height: auto;
+    width: 400px;
+    height: 277px;
 }
 
 
@@ -67,6 +64,10 @@ section {
     height: 3em;
     align-content: center;
 
+}
+
+.botao-inicio:hover{
+  background-color: rgb(82, 7, 7);
 }
 
 .display-4 {
@@ -132,69 +133,28 @@ h2 {
 }
 
 .formulario button {
-    background-color: #CB6D43;
+    background-color: #b9130d;
     border: none;
     font-weight: bold;
+}
+
+.formulario button:hover{
+  background-color: rgb(90, 13, 13)
 }
 
 .form-control {
     background-color: #F1EDEF;
 }
-.menu-acessibilidade{
-    position: fixed;
-    top:2rem;
-    right:20px;
-    z-index: 1000;
+
+.img-fluid{
+  height: 323px;
+  width: 300px;
 }
 
-.rotacao-botao{
-    transform: rotate(-90deg);
-    transform-origin: right center;
+.nav-link{
+  color: red;
 }
 
-.opcoes-acessibilidade{
-    margin-top:10px;
-    display: flex;
-    flex-direction: column;
-}
-
-.opcoes-acessibilidade button{
-    margin-bottom: 5px;
-}
-.apresenta-lista{
-    display: none;
-}
-
-.alto-contraste{
-    background-color: var(--alto-contraste-fundo);
-    color: var(--alto-contraste-texto);
-}
-
-.alto-contraste header,
-.alto-contraste footer,
-.alto-contraste .formulario{
-    background-color: var(--alto-contraste-fundo);
-    color: var(--alto-contraste-texto);
-}
-
-.alto-contraste .nav-link{
-    color: var(--alto-contraste-link);
-}
-
-.alto-contraste .botao-inicio,
-.alto-contraste .formulario button,
-.alto-contraste .btn-primary{
-    background-color: var(--alto-contraste-link);
-    color: var(--alto-contraste-fundo)
-}
-
-.alto-contraste #tropicalia {
-    background: none;
-}
-
-.alto-contraste #galeria {
-    background-color: var(--alto-contraste-fundo);
-}
-.alto-contraste .fundo-galeria {
-    background: none;
+.nav-link:hover{
+  color: rgb(92, 6, 6);
 }
